# oxrse_unit_conv

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: new_conv.yaml
.github/workflows/: os_versions  python_versions.yml  unittest.yml
src/oxrse_unit_conv/: __init__.py  main.py  si.py  units.py
src/oxrse_unit_conv/__tests__/: test_conversion_core.py  test_unit_km.py  test_unit_lb.py
src/oxrse_unit_conv/meta/: classes.py
src/tests/: test_conversion_core.py  test_unit_km.py  test_unit_lb.py  test_unit_mm.py  test_unit_sparkle.py  test_unit_st.py
