[project]
name = "oxrse_unit_conv"
version = "0.0.1"
authors = [
  { name="Matt Jaquiery", email="matt.jaquiery@dtc.ox.ac.uk" },
]
description = "A package for converting between units, primarily used to teach collaborative coding on GitHub."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OxfordRSE/oxrse_unit_conv"
"Bug Tracker" = "https://github.com/OxfordRSE/oxrse_unit_conv/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"